--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -1,30 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="vendor/fontawesome-free-5.11.2-web/css/all.css">
+  <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
   <link rel="stylesheet" href="dist/index.css">
   <meta charset="UTF-8">
-  <title>My Css example app</title>
+  <title>Neuron app</title>
 </head>
 <body>
 
-  <header>
-    <img src="assets/logo.png">
+<header class="header">
+  <img src="assets/logo.png">
 
-    <div class="header__links-wrapper">
-      <span class="header__link">home</span>
-      <span class="header__link">about</span>
-      <span class="header__link">features</span>
-      <span class="header__link">pages</span>
-      <span class="header__link">shop</span>
-      <span class="header__link">blog</span>
-      <span class="header__link">contact</span>
-    </div>
-    <div class="header__icons-wrapper">
-      <i class="fas fa-shopping-basket"></i>
-      <i class="fas fa-search"></i>
-    </div>
-  </header>
+  <div class="header__navigation">
+    <span class="header__link">home</span>
+    <span class="header__link">about</span>
+    <span class="header__link">features</span>
+    <span class="header__link">pages</span>
+    <span class="header__link">shop</span>
+    <span class="header__link">blog</span>
+    <span class="header__link">contact</span>
+  </div>
 
+  <div class="header__tools">
+    <i class="fas fa-shopping-basket"></i>
+    <i class="fas fa-search"></i>
+  </div>
+</header>
+
+<div class="main">
+  <div class="main__mission">
+    transforming enterprises with computer vision ai
+  </div>
+  <button class="button--cta">get started</button>
+</div>
+
+<div class="partners">
+  <div><i class="fab fa-accusoft"></i>accusoft</div>
+  <div><i class="fab fa-adobe"></i>adobe</div>
+  <div><i class="fab fa-bitbucket"></i>bitbucket</div>
+  <div><i class="fab fa-battle-net"></i>battlenet</div>
+  <div><i class="fab fa-cc-amex"></i>american express</div>
+</div>
+
+<div class="feature">
+  <img class="feature__image">
+  <div class="feature__description_block">
+    <div class="feature__name">pose estimation</div>
+    <h2 class="feature__header">custom face recognition pose detection</h2>
+    <div class="feature__description">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis urna cursus eget nunc scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit. Ac odio tempor orci dapibus. Sed risus pretium quam vulputate dignissim suspendisse in est ante. Vehicula ipsum a arcu cursus vitae congue mauris.</p>
+      <p>Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis. Nunc congue nisi vitae suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum dolor sit amet consectetur. Pellentesque massa placerat duis ultricies.</p>
+    </div>
+    <button class="button--cta">check it out</button>
+  </div>
+</div>
+
+<div class="feature">
+  <div class="feature__description_block">
+    <div class="feature__name">object detection</div>
+    <h2 class="feature__header">the most personalized object detection</h2>
+    <div class="feature__description">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis urna cursus eget nunc scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit. Ac odio tempor orci dapibus. Sed risus pretium quam vulputate dignissim suspendisse in est ante. Vehicula ipsum a arcu cursus vitae congue mauris.</p>
+      <p>Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis. Nunc congue nisi vitae suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum dolor sit amet consectetur. Pellentesque massa placerat duis ultricies.</p>
+    </div>
+    <button class="button--cta">check it out</button>
+  </div>
+  <img class="feature__image">
+</div>
+
+<feature--highlighted>
+  <div class="feature__name">image segmentation</div>
+  <h2 class="feature__header">deep learning model for semantic image segmentation</h2>
+  <div class="feature__multi_image">
+    <img class="feature__image">
+    <img class="feature__image">
+    <img class="feature__image">
+  </div>
+  <button class="button--cta">check it out</button>
+</feature--highlighted>
 </body>
 </html>
