Added css normalization

--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
+  <link rel="stylesheet" href="node_modules/normalize.css">
   <link rel="stylesheet" href="dist/index.css">
   <meta charset="UTF-8">
   <title>Neuron app</title>
