Added styling for the jumbo section

--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -28,13 +28,12 @@
         <i class="fas fa-search"></i>
       </div>
     </div>
-
   </header>
 
-  <div class="main">
-    <div class="main__mission">
-      transforming enterprises with computer vision ai
-    </div>
+  <div class="jumbo">
+    <h1 class="jumbo__mission">
+      Transforming Enterprises with Computer Vision AI
+    </h1>
     <button class="button--cta">get started</button>
   </div>
 
