Improve styling for header

--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -9,232 +9,237 @@
 </head>
 <body>
 
-<div class="container">
-  <header class="header">
-    <img class="header__logo" src="assets/logo.png">
+<header class="header pt-4">
+  <div class="container d-flex justify-content-between align-items-center">
+    <img class="header__logo w-auto" src="assets/logo.png">
 
-    <div class="header__navigation">
-      <div class="header__links-wrapper">
-        <div class="header__link">home</div>
-        <div class="header__link">about</div>
-        <div class="header__link">features</div>
-        <div class="header__link">pages</div>
-        <div class="header__link">shop</div>
-        <div class="header__link">blog</div>
-        <div class="header__link">contact</div>
-      </div>
-      <div class="header__icons-wrapper">
+    <div class="navigation">
+      <ul class="navigation__links-wrapper mb-0">
+        <li class="navigation__link"><a>home</a></li>
+        <li class="navigation__link"><a>about</a></li>
+        <li class="navigation__link"><a>features</a></li>
+        <li class="navigation__link"><a>pages</a></li>
+        <li class="navigation__link"><a>shop</a></li>
+        <li class="navigation__link"><a>blog</a></li>
+        <li class="navigation__link"><a>contact</a></li>
+      </ul>
+      <div class="navigation__icons-wrapper">
         <i class="fas fa-shopping-basket"></i>
         <i class="fas fa-search"></i>
       </div>
     </div>
-  </header>
+  </div>
+</header>
 
-  <div class="jumbo">
-    <h1 class="jumbo__mission">
+<div class="jumbo">
+  <div class="container">
+    <h1 class="jumbo__title">
       Transforming Enterprises with Computer Vision AI
     </h1>
-    <button class="button--cta">get started</button>
+    <button class="button">get started</button>
   </div>
+</div>
 
-  <div class="partners">
-    <div><i class="fab fa-accusoft"></i>accusoft</div>
-    <div><i class="fab fa-adobe"></i>adobe</div>
-    <div><i class="fab fa-bitbucket"></i>bitbucket</div>
-    <div><i class="fab fa-battle-net"></i>battlenet</div>
-    <div><i class="fab fa-cc-amex"></i>american express</div>
-  </div>
-
-  <div class="feature">
-    <img class="feature__image">
-    <div class="feature__description-block">
-      <div class="feature__name">pose estimation</div>
-      <h2 class="feature__title">custom face recognition pose detection</h2>
-      <div class="feature__description">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Venenatis urna cursus eget nunc scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet nec
-          ullamcorper sit. Ac odio tempor orci dapibus. Sed risus pretium quam vulputate dignissim suspendisse in est
-          ante. Vehicula ipsum a arcu cursus vitae congue mauris.</p>
-        <p>Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget
-          nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis. Nunc congue nisi
-          vitae
-          suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum
-          dolor
-          sit amet consectetur. Pellentesque massa placerat duis ultricies.</p>
-      </div>
-      <button class="button--cta">check it out</button>
+<div class="partners">
+  <div class="container">
+    <div class="row">
+      <div class="col mx-auto"><i class="fab fa-accusoft"></i> accusoft</div>
+      <div class="col mx-auto"><i class="fab fa-adobe"></i> adobe</div>
+      <div class="col mx-auto"><i class="fab fa-bitbucket"></i> bitbucket</div>
+      <div class="col mx-auto"><i class="fab fa-battle-net"></i> battlenet</div>
+      <div class="col mx-auto"><i class="fab fa-cc-amex"></i> american&nbsp;express</div>
     </div>
   </div>
+</div>
 
-  <div class="feature">
-    <div class="feature__description-block">
-      <div class="feature__name">object detection</div>
-      <h2 class="feature__title">the most personalized object detection</h2>
-      <div class="feature__description">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Venenatis urna cursus eget nunc scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet nec
-          ullamcorper sit. Ac odio tempor orci dapibus. Sed risus pretium quam vulputate dignissim suspendisse in est
-          ante. Vehicula ipsum a arcu cursus vitae congue mauris.
-        </p>
-        <p>
-          Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget
-          nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis. Nunc congue nisi
-          vitae
-          suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum
-          dolor
-          sit amet consectetur. Pellentesque massa placerat duis ultricies.
-        </p>
-      </div>
-      <button class="button--cta">check it out</button>
-    </div>
-    <img class="feature__image">
+<div class="feature">
+  <img class="feature__image">
+  <div class="feature__content">
+    <div class="feature__name">pose estimation</div>
+    <h2 class="feature__title">custom face recognition pose detection</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Venenatis urna cursus eget nunc scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet nec
+      ullamcorper sit. Ac odio tempor orci dapibus. Sed risus pretium quam vulputate dignissim suspendisse in est
+      ante. Vehicula ipsum a arcu cursus vitae congue mauris.</p>
+    <p>Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget
+      nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis. Nunc congue nisi
+      vitae
+      suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum
+      dolor
+      sit amet consectetur. Pellentesque massa placerat duis ultricies.</p>
+    <button class="button--cta">check it out</button>
   </div>
+</div>
 
-  <div class="group group--highlighted">
-    <div class="group__name">image segmentation</div>
-    <h2 class="group__header">deep learning model for semantic image segmentation</h2>
-
-    <div class="group__multi-image">
-      <img class="group__image">
-      <img class="group__image">
-      <img class="group__image">
+<div class="feature">
+  <div class="feature__description-block">
+    <div class="feature__name">object detection</div>
+    <h2 class="feature__title">the most personalized object detection</h2>
+    <div class="feature__description">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Venenatis urna cursus eget nunc scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet nec
+        ullamcorper sit. Ac odio tempor orci dapibus. Sed risus pretium quam vulputate dignissim suspendisse in est
+        ante. Vehicula ipsum a arcu cursus vitae congue mauris.
+      </p>
+      <p>
+        Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget
+        nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis. Nunc congue nisi
+        vitae
+        suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum
+        dolor
+        sit amet consectetur. Pellentesque massa placerat duis ultricies.
+      </p>
     </div>
     <button class="button--cta">check it out</button>
   </div>
+  <img class="feature__image">
+</div>
 
-  <div class="group">
-    <div class="group__header">
-      <div>
-        <div class="group__name">why computer vision</div>
-        <h2 class="group__title">computer vision ai</h2>
-      </div>
-      <div>
-        <button class="button--cta">view all services</button>
-      </div>
+<div class="group group--highlighted">
+  <div class="group__name">image segmentation</div>
+  <h2 class="group__header">deep learning model for semantic image segmentation</h2>
+
+  <div class="group__multi-image">
+    <img class="group__image">
+    <img class="group__image">
+    <img class="group__image">
+  </div>
+  <button class="button--cta">check it out</button>
+</div>
+
+<div class="group">
+  <div class="group__header">
+    <div>
+      <div class="group__name">why computer vision</div>
+      <h2 class="group__title">computer vision ai</h2>
     </div>
-    <div class="card__container">
-      <div class="card">
-        <i class="fab fa-smile"></i>
-        <h3 class="card__title">face recognition detection</h3>
-        <p class="card__description">
-          Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
-          aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
-        </p>
-      </div>
-      <div class="card">
-        <i class="fab fa-smile"></i>
-        <h3 class="card__title">face recognition detection</h3>
-        <p class="card__description">
-          Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
-          aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
-        </p>
-      </div>
-      <div class="card">
-        <i class="fab fa-smile"></i>
-        <h3 class="card__title">face recognition detection</h3>
-        <p class="card__description">
-          Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
-          aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
-        </p>
-      </div>
-      <div class="card">
-        <i class="fab fa-smile"></i>
-        <h3 class="card__title">face recognition detection</h3>
-        <p class="card__description">
-          Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
-          aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
-        </p>
-      </div>
-      <div class="card">
-        <i class="fab fa-smile"></i>
-        <h3 class="card__title">face recognition detection</h3>
-        <p class="card__description">
-          Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
-          aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
-        </p>
-      </div>
-      <div class="card">
-        <i class="fab fa-smile"></i>
-        <h3 class="card__title">face recognition detection</h3>
-        <p class="card__description">
-          Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
-          aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
-        </p>
-      </div>
+    <div>
+      <button class="button--cta">view all services</button>
     </div>
   </div>
-
-  <div class="group group--highlighted">
-    <div class="group__name">testimonials</div>
-    <h2 class="group__header">happy client reviews</h2>
-
-    <div class="testimonial__container">
-      <div class="testimonial">
-        <div class="testimonial__header">
-          <img class="testimonial__avatar">
-          <div>
-            <h4 class="testimonial__name">John Doe</h4>
-            <span class="testimonial__rank">CEO - Some Company</span>
-          </div>
-        </div>
-        <p>
-          Vestibulum morbi blandit cursus risus at ultrices. Habitant morbi tristique senectus et. Rhoncus aenean vel
-          elit
-          scelerisque. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Fringilla urna
-          porttitor
-          rhoncus dolor purus.
-        </p>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star-half-alt"></i>
-        <i class="far fa-star"></i>
-      </div>
-      <div class="testimonial">
-        <div class="testimonial__header">
-          <img class="testimonial__avatar">
-          <div>
-            <h4 class="testimonial__name">John Doe</h4>
-            <span class="testimonial__rank">CEO - Some Company</span>
-          </div>
-        </div>
-        <p>
-          Vestibulum morbi blandit cursus risus at ultrices. Habitant morbi tristique senectus et. Rhoncus aenean vel
-          elit
-          scelerisque. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Fringilla urna
-          porttitor
-          rhoncus dolor purus.
-        </p>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star-half-alt"></i>
-        <i class="far fa-star"></i>
-      </div>
-      <div class="testimonial">
-        <div class="testimonial__header">
-          <img class="testimonial__avatar">
-          <div>
-            <h4 class="testimonial__name">John Doe</h4>
-            <span class="testimonial__rank">CEO - Some Company</span>
-          </div>
-        </div>
-        <p>
-          Vestibulum morbi blandit cursus risus at ultrices. Habitant morbi tristique senectus et. Rhoncus aenean vel
-          elit
-          scelerisque. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Fringilla urna
-          porttitor
-          rhoncus dolor purus.
-        </p>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star-half-alt"></i>
-        <i class="far fa-star"></i>
-      </div>
+  <div class="card__container">
+    <div class="card">
+      <i class="fab fa-smile"></i>
+      <h3 class="card__title">face recognition detection</h3>
+      <p class="card__description">
+        Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
+        aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
+      </p>
+    </div>
+    <div class="card">
+      <i class="fab fa-smile"></i>
+      <h3 class="card__title">face recognition detection</h3>
+      <p class="card__description">
+        Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
+        aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
+      </p>
+    </div>
+    <div class="card">
+      <i class="fab fa-smile"></i>
+      <h3 class="card__title">face recognition detection</h3>
+      <p class="card__description">
+        Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
+        aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
+      </p>
+    </div>
+    <div class="card">
+      <i class="fab fa-smile"></i>
+      <h3 class="card__title">face recognition detection</h3>
+      <p class="card__description">
+        Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
+        aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
+      </p>
+    </div>
+    <div class="card">
+      <i class="fab fa-smile"></i>
+      <h3 class="card__title">face recognition detection</h3>
+      <p class="card__description">
+        Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
+        aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
+      </p>
+    </div>
+    <div class="card">
+      <i class="fab fa-smile"></i>
+      <h3 class="card__title">face recognition detection</h3>
+      <p class="card__description">
+        Sit amet nulla facilisi morbi tempus iaculis urna. Amet mattis vulputate enim nulla
+        aliquet porttitor lacus luctus accumsan. Neque aliquam vestibulum morbi blandit cursus risus at.
+      </p>
     </div>
   </div>
+</div>
+
+<div class="group group--highlighted">
+  <div class="group__name">testimonials</div>
+  <h2 class="group__header">happy client reviews</h2>
+
+  <div class="testimonial__container">
+    <div class="testimonial">
+      <div class="testimonial__header">
+        <img class="testimonial__avatar">
+        <div>
+          <h4 class="testimonial__name">John Doe</h4>
+          <span class="testimonial__rank">CEO - Some Company</span>
+        </div>
+      </div>
+      <p>
+        Vestibulum morbi blandit cursus risus at ultrices. Habitant morbi tristique senectus et. Rhoncus aenean vel
+        elit
+        scelerisque. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Fringilla urna
+        porttitor
+        rhoncus dolor purus.
+      </p>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star-half-alt"></i>
+      <i class="far fa-star"></i>
+    </div>
+    <div class="testimonial">
+      <div class="testimonial__header">
+        <img class="testimonial__avatar">
+        <div>
+          <h4 class="testimonial__name">John Doe</h4>
+          <span class="testimonial__rank">CEO - Some Company</span>
+        </div>
+      </div>
+      <p>
+        Vestibulum morbi blandit cursus risus at ultrices. Habitant morbi tristique senectus et. Rhoncus aenean vel
+        elit
+        scelerisque. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Fringilla urna
+        porttitor
+        rhoncus dolor purus.
+      </p>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star-half-alt"></i>
+      <i class="far fa-star"></i>
+    </div>
+    <div class="testimonial">
+      <div class="testimonial__header">
+        <img class="testimonial__avatar">
+        <div>
+          <h4 class="testimonial__name">John Doe</h4>
+          <span class="testimonial__rank">CEO - Some Company</span>
+        </div>
+      </div>
+      <p>
+        Vestibulum morbi blandit cursus risus at ultrices. Habitant morbi tristique senectus et. Rhoncus aenean vel
+        elit
+        scelerisque. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Fringilla urna
+        porttitor
+        rhoncus dolor purus.
+      </p>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star-half-alt"></i>
+      <i class="far fa-star"></i>
+    </div>
+  </div>
+</div>
 </div>
 </body>
 </html>
